Docs : update fitur mitra
